--- a/Hand_Gesture_HOG_SVM_KNN.ipynb
+++ b/Hand_Gesture_HOG_SVM_KNN.ipynb
@@ -611,7 +611,7 @@
    },
    "outputs": [],
    "source": [
-    "# decuparea mainii din imagine, img bin si cea originala\n",
+    "# cropping the hand from the image\n",
     "def hand_contour(img, img_orig):\n",
     "    contour,_ = cv2.findContours(img.astype(np.uint8), cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "    arie_max=0\n",
